--- a/webStudy03_framework/src/main/webapp/WEB-INF/web.xml
+++ b/webStudy03_framework/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,47 @@
     <param-name>testParam</param-name>
     <param-value>paramValue</param-value>
   </context-param>
+  
+  <filter>
+  	<filter-name>CharaterEncodingFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.CharaterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CharaterEncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>AuthenticationFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.AuthenticationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>AuthenticationFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>AuthorizationFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.AuthorizationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>AuthorizationFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>FileUploadCheckFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.FileUploadCheckFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>FileUploadCheckFilter</filter-name>
+  	<url-pattern>*.do</url-pattern>
+  </filter-mapping>
+  
   <servlet>
   	<servlet-name>FrontController</servlet-name>
   	<servlet-class>kr.or.ddit.mvc.FrontController</servlet-class>
@@ -27,7 +68,9 @@
   		<param-name>suffix</param-name>
   		<param-value>.jsp</param-value>
   	</init-param>
+  	
   	<load-on-startup>1</load-on-startup>
+  	<multipart-config></multipart-config>
   </servlet>
   <servlet-mapping>
   	<servlet-name>FrontController</servlet-name>
@@ -64,6 +107,7 @@
     <servlet-name>ImageListServlet</servlet-name>
     <url-pattern>/image/imageList.do</url-pattern>
   </servlet-mapping>
+  
   <session-config>
     <session-timeout>10</session-timeout>
   </session-config>
